--- a/views/cart.html
+++ b/views/cart.html
@@ -1,6 +1,6 @@
 
 	<!-- Title Page -->
-	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url(images/heading-pages-01.jpg);">
+	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background:#b9b9b9;margin-bottom: 40px;">
 		<h2 class="l-text2 t-center" style="color:#555555;">
 			Carrinho
 		</h2>
@@ -90,7 +90,7 @@
 
 				<div class="size15 trans-0-4">
 					<!-- Button -->
-					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" onclick="window.location.href='/checkout'">
 						Finalizar Compra
 					</button>
 				</div>
