--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/7">Acessórios</a></li><li><a href="/categories/6">Feminino</a></li><li><a href="/categories/5">Masculino</a></li><li><a href="/categories/13">Novidades</a></li>
+<li><a href="/categories/7">Acessórios</a></li><li><a href="/categories/6">Feminino</a></li><li><a href="/categories/5">Masculino</a></li>
