--- a/views/category.html
+++ b/views/category.html
@@ -1,52 +1,61 @@
-<div class="product-big-title-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="product-bit-title text-center">
-                    <h2>{$category.descategory}</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="single-product-area">
-    <div class="zigzag-bottom"></div>
-    <div class="container">
-        <div class="row">
-            {loop="$products"}
-            <div class="col-md-3 col-sm-6">
-                <div class="single-shop-product">
-                    <div class="product-upper">
-                        <img src="{$value.desphoto}" alt="">
-                    </div>
-                    <h2><a href="/products/{$value.desurl}">{$value.desproduct}</a></h2>
-                    <div class="product-carousel-price">
-                        <ins>R${$value.vlprice}</ins>
-                    </div>  
-                    
-                    <div class="product-option-shop">
-                        <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70" rel="nofollow" href="/cart/{$value.idproduct}/add">Adicionar ao carrinho</a>
-                    </div>                       
-                </div>
-            </div>
-            {/loop}
-            
-            
-        </div>
-        
-        <div class="row">
-            <div class="col-md-12">
-                <div class="product-pagination text-center">
-                    <nav>
-                        <ul class="pagination">
-                        {loop="$pages"}
-                        <li><a href="{$value.link}">{$value.page}</a></li>
+
+	<!-- Title Page -->
+	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background:#b9b9b9;margin-bottom: 40px;">
+		<h2 class="l-text2 t-center" style="color:#555555;">
+			{$category.descategory}
+		</h2>
+	</section>
+
+                    <div class="container">
+					<div class="row">
+                         {loop="$products"}
+						<div class="col-sm-12 col-md-6 col-lg-4 p-b-50">
+							
+							<div class="block2">
+                               
+								<div class="block2-img wrap-pic-w of-hidden pos-relative">
+									<img style="max-width: 70%; "src="{$value.desphoto}" alt="IMG-PRODUCT">
+
+									<div class="block2-overlay trans-0-4">
+										<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
+											<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
+											<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
+										</a>
+
+										<div class="block2-btn-addcart w-size1 trans-0-4">
+											<!-- Button -->
+											<a href="/cart/{$value.idproduct}/add"><button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
+												comprar
+											</button></a>
+										</div>
+									</div>
+								</div>
+								<div class="block2-txt p-t-20">
+									<a href="/products/{$value.desurl}" class="block2-name dis-block s-text3 p-b-5">
+										{$value.desproduct}
+									</a>
+
+									<span class="block2-price m-text6 p-r-5">
+										R${$value.vlprice}
+									</span>
+								</div>
+                                
+							</div>
+							
+						</div>
                         {/loop}
-                        </ul>
-                    </nav>                        
-                </div>
-            </div>
-        </div>
-    </div>
+					</div>
+
+					<!-- Pagination -->
+					<div class="pagination flex-m flex-w p-t-26">
+						{loop="$pages"}
+						<a href="{$value.link}" class="item-pagination flex-c-m trans-0-4">{$value.page}</a>
+						{/loop}
+				</div>
+			</div>
+		</div>
+	</section>
+
 </div>
+	
